# python-git-interface

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docs.yml  flake8.yml  python-publish.yml  tests.yml
docs/: conf.py  index.rst  quick_start.rst  requirements.txt
docs/reference/: archive.rst  branch.rst  cat_file.rst  datatypes.rst  exceptions.rst  helpers.rst  index.rst  log.rst  ls.rst  pack.rst  rev_list.rst  show.rst  symbolic_ref.rst  tag.md  utils.rst
docs/reference/smart_http/: index.rst  quart.rst  ssh.rst
git_interface/: __init__.py  archive.py  branch.py  cat_file.py  constants.py  datatypes.py  exceptions.py  helpers.py  log.py  ls.py  pack.py  rev_list.py  shared.py  show.py  symbolic_ref.py  tag.py  utils.py
git_interface/smart_http/: __init__.py  quart.py  ssh.py
tests/: conftest.py  test_utils.py
