[metadata]
name = git-interface
version = 0.1.0
author = Leo Spratt
author_email = "contact@enchantedcode.co.uk"
description = Use the git cli from Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/enchant97/python-git-interface
license = MIT
keywords = git scm
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Topic :: Software Development :: Version Control :: Git
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = git_interface
python_requires = >=3.7
