[metadata]
name = git-interface
version = attr: git_interface.__version__
author = Leo Spratt
author_email = "contact@enchantedcode.co.uk"
description = Use the git cli from Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/enchant97/python-git-interface
project_urls =
    Change Log = https://github.com/enchant97/python-git-interface/blob/main/CHANGELOG.md
    Documentation = https://python-git-interface.readthedocs.io/en/latest/
license = MIT
keywords = git scm
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Topic :: Software Development :: Version Control :: Git
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: AsyncIO

[options]
packages = find:
python_requires = >=3.9
# Requirements are listed in setup.py for GitHub dependency graph

[options.packages.find]
exclude=tests
